# Aleph

./: .gitignore  .travis.yml  AUTHORS.md  BoundaryMatrix.hh  CMakeLists.txt  CONTRIBUTING.md  Conversions.hh  Defaults.hh  Dockerfile  Dualization.hh  IO.hh  LICENSE.md  PKGBUILD  PersistenceDiagram.hh  PersistenceDiagramCalculation.hh  PersistenceDiagramConversion.hh  PersistenceDiagramNorms.hh  PersistencePairing.hh  PersistencePairingCalculation.hh  PersistencePairs.hh  PersistentHomologyCalculation.hh  README.md  Simplex.hh  SimplicialComplex.hh  SimplicialComplexConversions.hh  Standard.hh  Types.hh  Vector.hh  aleph_function.cc  aleph_ply.cc  aleph_test.cc  conanfile.py
algorithms/: Standard.hh  Twist.hh
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  __init__.py  aleph.cc  out_of_source_setup.py  setup.py
boundaryMatrices/: BoundaryMatrix.hh  IO.hh
cmake/: AlephConfig.cmake.in  AlephConfigVersion.cmake.in  check_compiler_features.cmake  setup_external_macros.cmake
complexes/: FLANN.hh  NearestNeighbours.hh  RipsExpander.hh  RipsSkeleton.hh  VietorisRipsComplex.hh
config/: Defaults.hh
containers/: DataDescriptors.hh  PointCloud.hh
distances/: Euclidean.hh  Hausdorff.hh  Infinity.hh  Manhattan.hh  NearestNeighbour.hh  Traits.hh  Wasserstein.hh
docs/: Rieck16b.md  Rieck17a.md  Rieck17b.md  Rieck17d.md  _config.yml  building.md  examples.md  index.md  publications.md  tutorial_persistent_homology_simplicial_complex.md  tutorial_simplicial_complex_manually.md  tutorial_simplicial_complexes_io.md  tutorial_vietoris_rips_complex_point_cloud.md  (+1 more)
examples/: 1D.cc  CMakeLists.txt  create_persistence_diagrams.cc  create_random_graph.cc  image_analysis.cc  network_analysis.cc  persistent_intersection_homology.cc  ply.cc  vietoris-rips-eccentricity.cc  vietoris-rips.cc  vietoris_rips.cc  vietoris_rips_eccentricity.cc  vtk.cc  witness_complex.cc
examples/python/: network_analysis.py  persistence_indicator_function_distance.py
src/gui/: CMakeLists.txt  DataSetItem.cc  DataSetItem.hh  DataSetModel.cc  DataSetModel.hh  ExpandSimplicialComplexDialog.cc  ExpandSimplicialComplexDialog.hh  LoadDataSetHelpers.cc  LoadDataSetHelpers.hh  MainWindow.cc  MainWindow.hh  MetaTypes.hh  PersistenceDiagram.cc  PersistenceDiagram.hh  PersistenceDiagramHelpers.cc  PersistenceDiagramHelpers.hh  PersistenceDiagramNormDialog.cc  PersistenceDiagramNormDialog.hh  PersistenceDiagramView.cc  PersistenceDiagramView.hh  SimplicialComplexHelpers.cc  SimplicialComplexHelpers.hh  UnsignedValidator.cc  UnsignedValidator.hh
src/tools/: CMakeLists.txt  README.md  betti_numbers.cc  bipartite_graph_analysis.cc  clique-communities.cc  clique-dna.cc  clique-persistence-diagram.cc  clique_communities_to_json.cc  clique_persistence_diagram.cc  compare_extended_persistence_hierarchies.py  connectivity_matrix_analysis.cc  cover_tree.cc  create_functions.cc  ephemeral.cc  extended_persistence_hierarchy.cc  fragmentation_analysis.cc  function_analysis.cc  graph_analysis.cc  graph_distance.cc  interlevel_set_persistence_hierarchy.cc  local_dimensionality.cc  make_signature.cc  mean_curvature.cc  multi_scale_skeleton.cc  network_persistence_diagrams.cc  persistence_diagram_entropies.cc  persistence_diagram_statistics.cc  persistence_indicator_function.cc  persistence_indicator_function_confidence_sets.cc  persistence_indicator_function_glyph.cc  persistent_intersection_homology.cc  persistent_spines.cc  piecewise_linear_function_smoothing.cc  point_cloud_data_descriptors.cc  process_image_patches.cc  random_stratified_graphs.cc  relevant_edges.cc  rips_distributions.cc  sparse_adjacency_matrices.cc  spectral_analysis.cc  (+3 more)
tests/: .gitignore  Base.hh  Base.hh.in  CMakeLists.txt  test_barycentric_subdivision.cc  test_beta_skeleton.cc  test_bootstrap.cc  test_boundary_matrix_reduction.cc  test_cech_expansion.cc  test_clique_enumeration.cc  test_clique_graph.cc  test_combinatorial_curvature.cc  test_connected_components.cc  test_cover_tree.cc  test_data_descriptors.cc  test_distances.cc  test_dowker_complex.cc  test_filesystem.cc  test_floyd_warshall.cc  test_fractal_dimension.cc  test_graph_generation.cc  test_heat_kernel.cc  test_io_adjacency_matrix.cc  test_io_bipartite_adjacency_matrix.cc  test_io_functions.cc  test_io_gml.cc  test_io_graphml.cc  test_io_hdf5.cc  test_io_json.cc  test_io_lexicographic_triangulation.cc  test_io_pajek.cc  test_io_sparse_adjacency_matrix.cc  test_io_vtk.cc  test_kernel_density_estimator.cc  test_mesh.cc  test_munkres.cc  test_nearest_neighbours.cc  test_partitions.cc  test_persistence_diagrams.cc  test_persistent_homology_complete.cc  (+14 more)
tests/input/: Cover_tree_rebalance.txt  Cover_tree_simple.txt  Cover_tree_small.txt  Cover_tree_sorted.txt  Cover_tree_sparse.txt  D2.txt  Functions_Reeb.txt  Functions_simple.txt  Iris_colon_separated.txt  Iris_comma_separated.txt  Iris_comma_separated_sorted.txt  Persistence_diagrams.json  S1.txt  S1vS1_08_20.txt  S1vS1_10_19.txt  Simple.gml  Simple.h5  Simple.net  Simple.vtk  Simple_adjacency_matrix.txt  Simple_adjacency_matrix_A.txt  Simple_adjacency_matrix_edge_attributes.txt  Simple_adjacency_matrix_graph_indicator.txt  Simple_adjacency_matrix_graph_labels.txt  Simple_inline.gml  Simple_with_labels.gml  Simple_with_labels.net  Triangle.txt  Triangle_point_cloud.txt
tests/persistenceDiagrams/: Iris_dimension_0.txt  Iris_dimension_1.txt  Iris_dimension_2.txt
tools/: CMakeLists.txt  clique-communities.cc  clique-dna.cc  clique-persistence-diagram.cc  compare_extended_persistence_hierarchies.py  create_functions.cc  extended-persistence-hierarchy.cc  extended_persistence_hierarchy.cc  netcdf_to_vtk.py  network-persistence-diagrams.cc  network_persistence_diagrams.cc  persistence-diagram-norms.cc  persistence-indicator-function-distance.cc  persistence-indicator-function.cc  persistence_diagram_norms.cc  persistence_diagram_statistics.cc  persistence_indicator_function.cc  point_cloud_data_descriptors.cc  topological-kernels.cc  topological_distance.cc  visualize_extended_persistence_hierarchies.py  wasserstein-distance.cc
(+239 files in other folders)
